--- a/insulin.html
+++ b/insulin.html
@@ -277,6 +277,7 @@ function setSectionTitle(elId, title){
 }
 
 const T = {
+  /* ======= DANSK (DIN TEKST – BEVARET) ======= */
   da:{
     pageTitle:"Insulin – behandling af diabetes",
     hdrH1:"Insulin – behandling af diabetes",
@@ -343,6 +344,7 @@ const T = {
     footer2:"Udarbejdet af farmakonomen: Ibrahim Dahir Hanaf"
   },
 
+  /* ======= ENGLISH (DIN TEKST – BEVARET) ======= */
   en:{
     pageTitle:"Insulin – diabetes treatment",
     hdrH1:"Insulin – diabetes treatment",
@@ -409,6 +411,7 @@ const T = {
     footer2:"Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
   },
 
+  /* ======= SOMALI (DIN TEKST – BEVARET) ======= */
   so:{
     pageTitle:"Insulin – daaweynta sonkorowga",
     hdrH1:"Insulin – daaweynta sonkorowga",
@@ -473,10 +476,206 @@ const T = {
     ],
     footer1:"Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir farmashiyaha ama dhakhtarkaaga.",
     footer2:"(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)<br/><br/>Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf<br/>(Dette materiale er udviklet af farmakonomen: Ibrahim Dahir Hanaf)"
+  },
+
+  /* ======= ARABIC (kort men komplet) ======= */
+  ar:{
+    pageTitle:"الإنسولين – علاج السكري",
+    hdrH1:"الإنسولين – علاج السكري",
+    hdrP:"معلومات مختصرة للمرضى وأفراد الأسرة.",
+    backText:"العودة إلى قائمة الأدوية",
+    langLabel:"اختر اللغة:",
+    drugName:"الإنسولين",
+    drugForm:"حقن (قلم أو محقنة)",
+    badgeText:"مختصر وواضح",
+
+    sec0Title:"ما هو الإنسولين؟",
+    sec0:["هرمون يصنعه البنكرياس عادةً، ويساعد الجلوكوز على دخول الخلايا لإنتاج الطاقة."],
+    sec1Title:"لماذا يُستخدم؟",
+    sec1:["سكري النوع 1 (دائماً يحتاج إنسولين).","سكري النوع 2 عند الحاجة أو إذا لم تكفِ الأقراص."],
+    sec2Title:"كيفية الاستخدام",
+    sec2:["يُحقن تحت الجلد غالباً بقلم.","أنواع: سريع/متوسط/طويل المفعول.","اتبع خطة الطبيب وبدّل مواضع الحقن لتجنب التكتلات."],
+    sec3Title:"الطعام والشراب",
+    sec3:["مع الإنسولين سريع المفعول، توقيت الوجبة مهم.","احتفظ بسكر سريع (أقراص جلوكوز)."],
+    sec4Title:"تحذيرات",
+    sec4:["الخطر الأهم: انخفاض سكر الدم.","أعراض: تعرّق، رجفة، خفقان، جوع، ارتباك، دوخة.","عالج الانخفاض سريعاً واتبع خطتك.","تجنب القيادة إذا كنت متأثراً."],
+    sec5Title:"الآثار الجانبية",
+    sec5:["انخفاض سكر الدم.","زيادة وزن لدى بعض الأشخاص.","احمرار/حكة في موضع الحقن."],
+    sec6Title:"التداخلات",
+    sec6:["بعض الأدوية تغيّر سكر الدم واحتياج الإنسولين (مثل الستيرويدات وبعض المدرات وحاصرات بيتا)."],
+    sec7Title:"رمضان والصيام",
+    sec7:["يمكن استخدام الإنسولين لكن يجب تعديل الخطة قبل رمضان.","إذا حدث انخفاض سكر يجب الإفطار للسلامة."],
+    sec8Title:"الحفظ",
+    sec8:["غير المفتوح عادةً في الثلاجة (لا يُجمّد).","قلم الاستخدام قد يُحفظ بدرجة الغرفة مدة محدودة حسب النشرة.","احمِه من الحرارة والشمس."],
+    footer1:"للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
+    footer2:"إعداد: إبراهيم ظاهر حنف"
+  },
+
+  /* ======= TURKISH ======= */
+  tr:{
+    pageTitle:"İnsülin – diyabet tedavisi",
+    hdrH1:"İnsülin – diyabet tedavisi",
+    hdrP:"Hasta ve yakınları için kısa bilgi.",
+    backText:"İlaç listesine geri dön",
+    langLabel:"Dil seçin:",
+    drugName:"İnsülin",
+    drugForm:"Enjeksiyon (kalem veya şırınga)",
+    badgeText:"Kısa ve anlaşılır",
+
+    sec0Title:"İnsülin nedir?",
+    sec0:["Pankreasın ürettiği bir hormondur; glukozun hücrelere girip enerjiye dönüşmesine yardımcı olur."],
+    sec1Title:"Ne için kullanılır?",
+    sec1:["Tip 1 diyabet (her zaman insülin).","Tip 2 diyabet (gerektiğinde)."],
+    sec2Title:"Nasıl kullanılır?",
+    sec2:["Cilt altına enjeksiyon (çoğunlukla kalem).","Hızlı/orta/uzun etkili türleri vardır.","Doz ve saat kişiye özeldir; enjeksiyon bölgelerini değiştirin."],
+    sec3Title:"Yemek ve içecek",
+    sec3:["Hızlı etkili insülinde öğün zamanı önemlidir.","Yanınızda hızlı şeker bulundurun (glukoz tableti)."],
+    sec4Title:"Uyarılar",
+    sec4:["En önemli risk: hipoglisemi.","Belirti: terleme, titreme, çarpıntı, açlık, sersemlik.","Hızlı şeker alın ve plana uyun.","Etkilenmişken araç kullanmayın."],
+    sec5Title:"Yan etkiler",
+    sec5:["Hipoglisemi.","Bazılarında kilo artışı.","Enjeksiyon yerinde kızarıklık/kaşıntı."],
+    sec6Title:"Etkileşimler",
+    sec6:["Bazı ilaçlar insülin ihtiyacını değiştirebilir (steroidler, bazı diüretikler, beta blokerler)."],
+    sec7Title:"Ramazan",
+    sec7:["Ramazan’da kullanılabilir ama plan ayarlanmalı.","Düşük şeker olursa oruç bozulmalıdır."],
+    sec8Title:"Saklama",
+    sec8:["Açılmamış insülin genelde buzdolabında (dondurmayın).","Kullanılan kalem oda ısısında sınırlı süre kalabilir (etikete bakın).","Sıcak ve güneşten koruyun."],
+    footer1:"Daha fazla bilgi için eczane veya doktorunuza başvurun.",
+    footer2:"Hazırlayan: Ibrahim Dahir Hanaf"
+  },
+
+  /* ======= URDU ======= */
+  ur:{
+    pageTitle:"انسولین – ذیابیطس کا علاج",
+    hdrH1:"انسولین – ذیابیطس کا علاج",
+    hdrP:"مریضوں اور اہلِ خانہ کے لیے مختصر معلومات۔",
+    backText:"فہرست پر واپس",
+    langLabel:"زبان منتخب کریں:",
+    drugName:"انسولین",
+    drugForm:"انجیکشن (پین یا سرنج)",
+    badgeText:"مختصر اور واضح",
+
+    sec0Title:"انسولین کیا ہے؟",
+    sec0:["یہ ہارمون لبلبہ بناتا ہے؛ گلوکوز کو خون سے خلیوں میں لے جا کر توانائی بنانے میں مدد دیتا ہے۔"],
+    sec1Title:"کس لیے استعمال ہوتی ہے؟",
+    sec1:["ٹائپ 1 ذیابیطس (ہمیشہ انسولین).","ٹائپ 2 ذیابیطس (ضرورت کے وقت)."],
+    sec2Title:"استعمال کا طریقہ",
+    sec2:["جلد کے نیچے انجیکشن (اکثر پین سے).","تیز/درمیانی/لمبے اثر والی اقسام.","ڈوز اور وقت فرد کے مطابق؛ جگہ بدلتے رہیں۔"],
+    sec3Title:"کھانا پینا",
+    sec3:["تیز اثر والی انسولین میں کھانے کا وقت اہم ہے.","فوری شوگر ساتھ رکھیں (گلوکوز ٹیبلٹس)."],
+    sec4Title:"احتیاطیں",
+    sec4:["اہم خطرہ: کم شوگر (ہائپوگلیسیمیا).","علامات: پسینہ، کپکپی، دل کی دھڑکن، چکر.","فوری شوگر لیں اور پلان پر عمل کریں.","متاثر ہوں تو گاڑی نہ چلائیں۔"],
+    sec5Title:"مضر اثرات",
+    sec5:["کم شوگر.","کچھ لوگوں میں وزن بڑھنا.","انجیکشن کی جگہ پر لالی/خارش."],
+    sec6Title:"تداخلات",
+    sec6:["کچھ ادویات شوگر/انسولین کی ضرورت بدل سکتی ہیں (اسٹیرائڈز، کچھ ڈائیوریٹکس، بیٹا بلاکرز)."],
+    sec7Title:"رمضان",
+    sec7:["رمضان میں ممکن ہے مگر پلان ایڈجسٹ ضروری ہے.","کم شوگر ہو تو روزہ توڑنا چاہیے۔"],
+    sec8Title:"محفوظ رکھنا",
+    sec8:["بند انسولین عموماً فریج میں (منجمد نہ کریں).","استعمال والی پین محدود وقت کمرہ درجہ حرارت پر رہ سکتی ہے.","گرمی اور دھوپ سے بچائیں۔"],
+    footer1:"مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
+    footer2:"مرتب کردہ: ابراہیم ظاہر حنف"
+  },
+
+  /* ======= FARSI ======= */
+  fa:{
+    pageTitle:"انسولین – درمان دیابت",
+    hdrH1:"انسولین – درمان دیابت",
+    hdrP:"اطلاعات کوتاه برای بیماران و خانواده‌ها.",
+    backText:"بازگشت به فهرست",
+    langLabel:"انتخاب زبان:",
+    drugName:"انسولین",
+    drugForm:"تزریق (قلم یا سرنگ)",
+    badgeText:"کوتاه و روشن",
+
+    sec0Title:"انسولین چیست؟",
+    sec0:["هورمونی است که معمولاً توسط پانکراس ساخته می‌شود و به ورود گلوکز به سلول‌ها برای تولید انرژی کمک می‌کند."],
+    sec1Title:"موارد مصرف",
+    sec1:["دیابت نوع ۱ (همیشه نیاز به انسولین).","دیابت نوع ۲ در صورت نیاز."],
+    sec2Title:"نحوه استفاده",
+    sec2:["تزریق زیرجلدی، اغلب با قلم.","انواع سریع/متوسط/طولانی‌اثر.","دوز و زمان فردی است؛ محل تزریق را بچرخانید."],
+    sec3Title:"غذا و نوشیدنی",
+    sec3:["در انسولین سریع‌اثر، زمان‌بندی وعده مهم است.","قند سریع همراه داشته باشید (قرص گلوکز)."],
+    sec4Title:"هشدارها",
+    sec4:["خطر اصلی: افت قند خون.","علائم: تعریق، لرزش، تپش قلب، گیجی، سرگیجه.","طبق برنامه سریع درمان کنید.","در صورت تاثیر افت قند، رانندگی نکنید."],
+    sec5Title:"عوارض",
+    sec5:["افت قند.","افزایش وزن در برخی.","قرمزی/خارش محل تزریق."],
+    sec6Title:"تداخلات",
+    sec6:["برخی داروها نیاز به انسولین را تغییر می‌دهند (استروئیدها، برخی مدرها، بتابلوکرها)."],
+    sec7Title:"رمضان",
+    sec7:["قابل استفاده است ولی نیاز به تنظیم برنامه قبل از رمضان دارد.","در افت قند، برای ایمنی باید روزه را شکست."],
+    sec8Title:"نگهداری",
+    sec8:["انسولینِ بازنشده معمولاً در یخچال (یخ‌زدگی ممنوع).","قلمِ در حال استفاده ممکن است مدت محدودی در دمای اتاق بماند.","از گرما و آفتاب محافظت شود."],
+    footer1:"برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
+    footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
+  },
+
+  /* ======= DARI ======= */
+  prs:{
+    pageTitle:"انسولین – تداوی شکر",
+    hdrH1:"انسولین – تداوی شکر",
+    hdrP:"معلومات کوتاه برای مریضان و خانواده‌ها.",
+    backText:"بازگشت به فهرست",
+    langLabel:"انتخاب زبان:",
+    drugName:"انسولین",
+    drugForm:"تزریق (قلم یا سرنگ)",
+    badgeText:"کوتاه و واضح",
+
+    sec0Title:"انسولین چیست؟",
+    sec0:["هورمونِ پانکراس است و کمک می‌کند گلوکوز به سلول‌ها رفته انرژی بسازد."],
+    sec1Title:"برای چی استفاده می‌شود؟",
+    sec1:["دیابت نوع ۱ (همیشه).","دیابت نوع ۲ در صورت ضرورت."],
+    sec2Title:"چگونه استفاده شود؟",
+    sec2:["تزریق زیر پوست (اکثر با قلم).","انواع سریع/متوسط/طولانی‌اثر.","دوز و وقت فردی است؛ جای تزریق را تغییر دهید."],
+    sec3Title:"غذا و نوشیدنی",
+    sec3:["با انسولین سریع‌اثر، وقت غذا مهم است.","قند فوری همراه داشته باشید."],
+    sec4Title:"هشدارها",
+    sec4:["خطر اصلی: پایین رفتن قند.","علایم: عرق، لرزش، تپش، گیجی، سرگیجه.","طبق پلان فوری تداوی کنید.","در حالت تاثیر، موتر نرانید."],
+    sec5Title:"عوارض",
+    sec5:["قند پایین.","وزن‌گیری در بعضی‌ها.","سرخی/خارش محل تزریق."],
+    sec6Title:"تداخلات",
+    sec6:["برخی دواها ضرورت انسولین را تغییر می‌دهد (استروئیدها، بعضی مدرها، بتابلوکرها)."],
+    sec7Title:"رمضان",
+    sec7:["ممکن است ولی پلان باید قبل از رمضان تنظیم شود.","در قند پایین، باید روزه را بشکنید."],
+    sec8Title:"نگهداری",
+    sec8:["انسولین بازنشده در یخچال (یخ نزنید).","قلم استفاده‌شده ممکن است مدت محدود در دمای اتاق بماند.","از گرما و آفتاب محافظت کنید."],
+    footer1:"برای معلومات بیشتر با دواخانه یا داکتر تماس بگیرید.",
+    footer2:"تهیه‌کننده: ابراهیم ظاهر حنف"
+  },
+
+  /* ======= PASHTO ======= */
+  ps:{
+    pageTitle:"انسولین – د شکر درملنه",
+    hdrH1:"انسولین – د شکر درملنه",
+    hdrP:"د ناروغانو او کورنۍ لپاره لنډ معلومات.",
+    backText:"لېست ته بېرته",
+    langLabel:"ژبه وټاکئ:",
+    drugName:"انسولین",
+    drugForm:"پیچکاري (قلم یا سرنج)",
+    badgeText:"لنډ او روښانه",
+
+    sec0Title:"انسولین څه شی دی؟",
+    sec0:["هورمون دی چې پانقراس یې جوړوي او ګلوکوز حجرو ته وړي څو انرژي جوړ شي."],
+    sec1Title:"د څه لپاره؟",
+    sec1:["د ۱ ډول شکر (تل انسولین).","د ۲ ډول شکر کله چې اړتیا وي."],
+    sec2Title:"څنګه وکارول شي؟",
+    sec2:["د پوست لاندې پیچکاري، ډېر وخت د قلم په وسیله.","ډولونه: چټک/منځنی/اوږد اثر.","دوز او وخت شخصي وي؛ د پیچکارۍ ځای بدل کړئ."],
+    sec3Title:"خواړه او څښاک",
+    sec3:["د چټک انسولین سره د خوړو وخت مهم دی.","چټک بوره له ځان سره ولرئ (ګلوکوز ټابلیټ)."],
+    sec4Title:"خبرداری",
+    sec4:["اصلي خطر: ټیټه بوره (هایپوګلیسیمیا).","نښې: خولې، رېږدېدل، د زړه درزا، ګډوډي، سر ګرځېدل.","ژر درملنه وکړئ.","که اغېزمن یاست، موټر مه چلوئ."],
+    sec5Title:"اړخیزې اغېزې",
+    sec5:["ټیټه بوره.","ځینو کې وزن زیاتېدل.","د پیچکارۍ ځای کې سوروالی/خارښ."],
+    sec6Title:"تداخلات",
+    sec6:["ځینې درمل د انسولین اړتیا بدلوي (سټېروېډونه، ځینې ادرار زیاتونکي، بتابلاکرونه)."],
+    sec7Title:"رمضان",
+    sec7:["کارېدلی شي خو پلان باید مخکې تنظیم شي.","که بوره ټیټه شي، روژه ماتول اړین دي."],
+    sec8Title:"ساتنه",
+    sec8:["نه‌پرانیستل شوی انسولین په یخچال کې (یخ مه کوئ).","کارېدونکی قلم ممکن محدود وخت په خونې تودوخې کې وي.","له تودوخې او لمره یې وساتئ."],
+    footer1:"د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
+    footer2:"چمتو کوونکی: ابراهیم ظاهر حنف"
   }
 };
-
-["ar","tr","ur","fa","prs","ps"].forEach(l=>{ if(!T[l]) T[l]=T.en; });
 
 function applyLang(lang){
   const d=T[lang] || T.da;
